--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,17 @@ scipy = "1.7.3"
 rpy2 = "3.5.6"
 pandas = "~1.5.3"
 
+[tool.poetry.dev-dependencies]
+black = "^22.3.0"
+pylint = "^2.12.2"
+tox = "^3.24.5"
+pytest = "^6.2.4"
+pytest-cov = "^2.12.1"
+Sphinx = "^4.1.1"
+mypy = "^0.941"
+sphinx-rtd-theme = "^1.0.0"
+sphinx_mdinclude = "^0.5.1"
+
 
 [build-system]
 requires = ["poetry-core"]
