--- a/oldpyproject.toml
+++ b/oldpyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "pyflowbat"
 version = "0.0.0"
-description = ""
+description = "A Python package for rapid, batch analysis of flow cytometry data."
 authors = ["Zoë <zoex308@proton.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.10"
-numpy = "^1.24.2"
-matplotlib = "^3.7.1"
+python = "~3.11"
+numpy = "1.22.2"
+matplotlib = "3.5.0"
 FlowCal = "^1.3.0"
-statsmodels = "^0.13.5"
-scipy = "^1.10.1"
-rpy2 = "^3.5.10"
-pandas = "^2.0.0"
+statsmodels = "0.13.5"
+scipy = "~1.10"
+rpy2 = "3.5.6"
+pandas = "~1.5.3"
 
 
 [tool.poetry.dev-dependencies]
@@ -27,7 +27,6 @@ mypy = "^0.941"
 sphinx-rtd-theme = "^1.0.0"
 sphinx_mdinclude = "^0.5.1"
 
-
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
